# simplecalc

./: CMakeLists.txt  keypad_widget.cpp  keypad_widget.h  main.cpp
